--- a/AngularMvcProject/Content/Assets/css/custom.css
+++ b/AngularMvcProject/Content/Assets/css/custom.css
@@ -1357,6 +1357,7 @@ span.serviceCheckboxDiv input.sampleCheckbox {
 }
 .dropdown-menu.popupdropdownDiv ul.list-inline li {
     margin-right: 0;
+    width: 100%;
 }
 .dropdown-menu.popupdropdownDiv ul.list-inline li span.serviceMins {
 	color: #5A5A5A;
@@ -2088,7 +2089,7 @@ table#mytable tr td {
 .providerCustomer ul.list-inline {
     padding: 10px;
     overflow: auto;
-    height: 570px;
+    height: 500px;
     padding-bottom: 15px;
 }
 .providerCustomer .list-inline li.selectCustomer.active {
@@ -2101,7 +2102,7 @@ table#mytable tr td {
     color: #aab4b9;
     height: 40px;
     width: 100%;
-	margin-bottom: 10px;
+	/*margin-bottom: 10px;*/
 }
 .providerCustomer .list-inline .selectCustomer:hover {
     background: #E1E7EB;
@@ -2470,9 +2471,9 @@ span.dotSplitter
 .categoryButtonsDiv .serviceCancelBtn:focus {
     outline:none;
 }
-a#deletecateBtn {
+/*a#deletecateBtn {
     float: right;
-}
+}*/
 .allservicesText {
     float: left;
 }
@@ -3385,6 +3386,11 @@ span.staffdatepickerTime a {
     padding-left:5px;
 }
 
+.selected, .selected a {
+   background: #E1E7EB;
+   color: #000 !important;
+}
+
 .selectDropdown .dateTimeSelect {
     border: none;
 }
@@ -3743,6 +3749,27 @@ input#customerExt {
     background:url('../images/loading.gif') no-repeat left center !important;
 }
 /* 5-July-2017 css end  here     */
+
+
+/*11-aug-2017 css start here ==================================*/
+span.one.span_check {
+    width: 16px;
+    height: 14px;
+    display: inline-block;
+    border-radius: 3px;
+}
+.menu_scroll {
+    height: 180px;
+    overflow-y: auto;
+}
+.dropdown-menu.popupdropdownDiv ul.list-inline li label{
+    width:100%;
+    padding: 5px;
+}
+.dropdown-menu.popupdropdownDiv ul.list-inline li label:hover {
+    background: #E1E7EB;
+}
+/*11-aug-2017 css end here ==================================*/
 
 /* media css start here ================================= */
 
@@ -4130,7 +4157,7 @@ input#customerEmail {
 }
 .addcustomerSec {
    /*  padding: 15px 5px; */
-	height:100%;
+	height:660px;
 }
 .imageUploadForm img {
     width: 40px;
